<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="@color/transparent"
              xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:padding="24dp">

        <LinearLayout
            android:orientation="vertical"
            app:layout_heightPercent="80%"
            app:layout_widthPercent="80%"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <TextView
                    android:id="@+id/tv_exit"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/ic_no"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cus_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:stretchColumns="1">

                    <TableRow
                        style="@style/common_tablerow">

                        <TextView
                            style="@style/common_tablerow_text"
                            android:text="@string/teller_id"/>

                        <EditText
                            android:id="@+id/edt_teller_id"
                            style="@style/common_tablerow_edit"
                            android:hint="@string/hint_teller_id"
                            android:focusable="false"
                            />
                    </TableRow>

                    <TableRow
                        style="@style/common_tablerow">

                        <TextView
                            style="@style/common_tablerow_text"
                            android:text="@string/org_id"/>

                        <EditText
                            android:id="@+id/edt_org_id"
                            style="@style/common_tablerow_edit"
                            android:hint="@string/hint_org_id"
                            android:focusable="false"
                            />
                    </TableRow>

                    <TableRow
                        style="@style/common_tablerow">

                        <TextView
                            style="@style/common_tablerow_text"
                            android:text="@string/terminal_id"/>

                        <EditText
                            android:id="@+id/edt_terminal_id"
                            style="@style/common_tablerow_edit"
                            android:hint="@string/hint_terminal_id"
                            android:focusable="false"
                            />
                    </TableRow>

                    <TableRow
                        style="@style/common_tablerow">

                        <TextView
                            style="@style/common_tablerow_text"
                            android:text="@string/teller_finger"/>

                        <EditText
                            android:id="@+id/edt_teller_finger"
                            style="@style/common_tablerow_edit"
                            android:hint="@string/hint_teller_finger"
                            android:focusable="false"
                            />
                    </TableRow>
                </TableLayout>

                <android.support.percent.PercentRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    app:theme="@style/AlertDialog.AppCompat"
                    >

                    <Button
                        android:id="@+id/btn_read_finger"
                        android:layout_height="48dp"
                        android:layout_alignParentLeft="true"
                        android:background="@mipmap/btn_bg_red"
                        android:gravity="center"
                        android:text="@string/read_finger"
                        android:textColor="#fff"
                        app:layout_widthPercent="45%"
                        />
                    <Button
                        android:id="@+id/btn_sign_out"
                        android:layout_height="48dp"
                        android:layout_alignParentRight="true"
                        android:background="@mipmap/btn_bg_red"
                        android:gravity="center"
                        android:text="@string/sign_out"
                        android:textColor="#fff"
                        app:layout_widthPercent="45%"
                        android:enabled="false"
                        />
                </android.support.percent.PercentRelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.percent.PercentRelativeLayout>
</LinearLayout>
