<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ScrollView
            app:layout_heightPercent="90%"
            app:layout_widthPercent="90%"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/ll_cus_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:stretchColumns="1">


                        <TableRow
                            style="@style/common_tablerow">

                            <TextView
                                style="@style/common_tablerow_text"
                                android:text="@string/cardNum"/>

                            <EditText
                                android:id="@+id/cardNumber"
                                style="@style/common_tablerow_edit"
                                android:hint="@string/hint_card_num"
                                android:text="6224121100033050"
                                />

                            <Button
                                android:id="@+id/read_card"
                                android:layout_marginLeft="8dp"
                                android:layout_width="128dp"
                                android:layout_height="48dp"
                                android:src="@color/aquamarine"
                                android:text="@string/read_card"
                                android:background="@drawable/shape"
                                />
                        </TableRow>

                        <TableRow
                            style="@style/common_tablerow">

                            <TextView
                                style="@style/common_tablerow_text"
                                android:text="@string/oldCardPwd"/>

                            <EditText
                                android:id="@+id/old_card_password"
                                style="@style/common_tablerow_edit"
                                android:hint="@string/hint_old_card_password"
                                android:text="123456"
                                />

                            <Button
                                android:id="@+id/read_old_card_password"
                                android:layout_marginLeft="8dp"
                                android:layout_width="128dp"
                                android:layout_height="48dp"
                                android:src="@color/aquamarine"
                                android:text="@string/read_pwd"
                                android:background="@drawable/shape"/>
                        </TableRow>

                        <TableRow
                            style="@style/common_tablerow">

                            <TextView
                                style="@style/common_tablerow_text"
                                android:text="@string/newCardPwd"/>

                            <EditText
                                android:id="@+id/new_card_password"
                                style="@style/common_tablerow_edit"
                                android:hint="@string/hint_new_card_password"
                                android:text="132435"
                                />

                            <Button
                                android:id="@+id/read_new_card_password"
                                android:layout_marginLeft="8dp"
                                android:layout_width="128dp"
                                android:layout_height="48dp"
                                android:src="@color/aquamarine"
                                android:text="@string/read_pwd"
                                android:background="@drawable/shape"/>
                        </TableRow>

                    </TableLayout>

                    <android.support.percent.PercentRelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        app:theme="@style/AlertDialog.AppCompat"
                        android:layout_marginTop="40dp"
                        >

                        <Button
                            android:id="@+id/submit"
                            app:layout_widthPercent="45%"
                            android:layout_alignParentLeft="true"
                            android:layout_height="48dp"
                            android:background="@mipmap/btn_bg_red"
                            android:gravity="center"
                            android:text="@string/submit"
                            android:textColor="#fff"
                            />
                        <Button
                            android:id="@+id/cancel"
                            app:layout_widthPercent="45%"
                            android:layout_alignParentRight="true"
                            android:layout_height="48dp"
                            android:background="@mipmap/btn_bg_red"
                            android:gravity="center"
                            android:text="@string/cancel"
                            android:textColor="#fff"
                            />
                    </android.support.percent.PercentRelativeLayout>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </android.support.percent.PercentRelativeLayout>

</LinearLayout>
