<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:orientation="vertical"
        android:padding="@dimen/dp_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TableRow
                style="@style/common_tablerow"
                android:layout_width="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="3">

                <TextView
                    style="@style/common_tablerow_text"
                    android:text="@string/teller_id"/>

                <EditText
                    android:id="@+id/edt_teller_id"
                    style="@style/common_tablerow_edit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_teller_id"
                    />

            </TableRow>
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/shape"
                    android:src="@color/aquamarine"
                    android:text="@string/submit"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
