<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_view_bg"
    android:orientation="vertical"
    tools:context="com.dysen.opencard.ui.MainActivity">

    <include layout="@layout/common_title_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:gravity="left"
                >

                <ImageView
                    android:id="@+id/iv_org_img"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@mipmap/org_bg"
                    android:padding="8dp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="right"
                android:orientation="horizontal">

                <android.support.percent.PercentRelativeLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:theme="@style/AlertDialog.AppCompat"
                    >

                    <Button
                        android:id="@+id/btn_forced_withdrawal"
                        android:layout_height="48dp"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/shape"
                        android:gravity="center"
                        android:text="@string/mandatory_withdrawal"
                        android:textColor="#808080"
                        app:layout_widthPercent="45%"
                        />

                    <Button
                        android:id="@+id/btn_temp_withdrawal"
                        android:layout_height="48dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/shape"
                        android:gravity="center"
                        android:text="@string/temp_withdrawal"
                        android:textColor="#808080"
                        app:layout_widthPercent="45%"
                        />
                </android.support.percent.PercentRelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_content_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">
                    <RadioButton
                        android:id="@+id/rbtn_open_card"
                        android:text="@string/open_card"
                        style="@style/common_rbtn"
                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/rbtn_activation_card"
                        android:text="@string/activation_card"
                        style="@style/common_rbtn"
                        android:textColor="@color/gray"
                        />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_content_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="3"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/fl_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/org_id"/>
            <TextView
                android:id="@+id/tv_org_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/teller_name"
            android:layout_marginLeft="24dp"/>
            <TextView
                android:id="@+id/tv_teller_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/teller_id"
                android:layout_marginLeft="24dp"/>
            <TextView
                android:id="@+id/tv_teller_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_date"
                android:layout_marginLeft="48dp"/>
            <TextView
                android:id="@+id/tv_login_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
